method level security implementation in memberController